RESOLVED FIXED199379
StorageManager::SessionStorageNamespace::allowedConnections() should not copy the HashSet
https://bugs.webkit.org/show_bug.cgi?id=199379
Summary StorageManager::SessionStorageNamespace::allowedConnections() should not copy...
Chris Dumez
Reported 2019-07-01 14:11:51 PDT
StorageManager::SessionStorageNamespace::allowedConnections() should not copy the HashSet
Attachments
Patch (1.62 KB, patch)
2019-07-01 14:12 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-07-01 14:12:58 PDT
WebKit Commit Bot
Comment 2 2019-07-01 15:16:17 PDT
Comment on attachment 373263 [details] Patch Clearing flags on attachment: 373263 Committed r247028: <https://trac.webkit.org/changeset/247028>
WebKit Commit Bot
Comment 3 2019-07-01 15:16:18 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-07-01 15:17:16 PDT
Note You need to log in before you can comment on or make changes to this bug.