StorageManager::SessionStorageNamespace::allowedConnections() should not copy the HashSet https://bugs.webkit.org/show_bug.cgi?id=199379

Reviewed by Alex Christensen.

This was pretty inefficient.

* NetworkProcess/WebStorage/StorageManager.cpp:
(WebKit::StorageManager::SessionStorageNamespace::allowedConnections const):


Canonical link: https://commits.webkit.org/213313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247028 268f45cc-cd09-0410-ab3c-d52691b4dbfc